trunk/Archive2/a3/ddfe4dd17492fb/output
main.cpp: In function 'main':
main.cpp:6:5: error: ISO C forbids nested functions [-Wpedantic]
     double imaginary i = 2.0*I; // pure imaginary
     ^
main.cpp:6:22: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'i'
     double imaginary i = 2.0*I; // pure imaginary
                      ^
main.cpp:6:22: error: 'i' undeclared (first use in this function)
main.cpp:6:22: note: each undeclared identifier is reported only once for each function it appears in
